--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./app.js"
+    "start": "nodemon ./app.js",
+    "stuff": "serve app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
